styles/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply font-body bg-white text-lightForeground !important;
  }

  html[class~="dark"] body {
    @apply bg-darkBackground text-white !important;
  }
}

@layer components {
  p,
  ul,
  ol,
  table {
    @apply text-base16 text-lightForeground !important;
  }

  article a {
    @apply text-lightLinks no-underline hover:underline !important;
  }

  [role="tablist"] button[data-headlessui-state="selected"] {
    @apply text-lightLinks border-lightLinks !important;
  }

  .nextra-sidebar-container .active > a {
    @apply text-lightLinks bg-black/10 !important;
  }

  .nextra-toc .nx-text-primary-600 {
    @apply text-lightLinks !important;
  }

  table {
    @apply w-full table !important;
  }

  tr {
    @apply text-base p-4 !important;
  }

  th {
    @apply text-left p-4 leading-[1.15em] font-normal text-base !important;
  }

  td {
    @apply py-2 px-4 text-base !important;
  }

  input {
    @apply p-2 font-semibold;
  }

  .api-params table {
    width: 100%;
    border-collapse: collapse;
    padding: 0;
    margin: 0;
    position: relative;
  }

  .required,
  .input-error {
    color: red !important;
  }

  .response {
    @apply py-4 text-light bg-darkGray rounded-xl !important;
  }

  .response p {
    @apply text-light !important;
  }

  html[class~="dark"] {
    p,
    ul,
    ol,
    table {
      @apply text-white !important;
    }

    article a {
      @apply text-darkLinks !important;
    }

    [role="tablist"] button[data-headlessui-state="selected"] {
      @apply text-darkLinks border-darkLinks !important;
    }

    .nextra-sidebar-container .active > a {
      @apply text-darkLinks bg-white/10 !important;
    }

    .nextra-toc .nx-text-primary-600 {
      @apply text-darkLinks !important;
    }

    ul li[data-headlessui-state="active"] {
      @apply bg-darkLinks/10 text-darkLinks !important;
    }

    .required,
    .input-error {
      color: red !important;
    }

    .response p {
      @apply text-light !important;
    }
  }
}

